--- a/assets/scss/molecules/_main-nav.scss
+++ b/assets/scss/molecules/_main-nav.scss
@@ -15,6 +15,8 @@
     position: relative;
     border-radius: 0;
     padding: 0px 15px 0 59px;
+    border-bottom: 1px solid $tile-border-colour;
+    z-index: 15;
 
     & > div {
       margin: 0 !important;
